# connect-actions

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: claude.yml  test.yml
cleanup-previews/: action.yml
cleanup-previews/scripts/: parse-deployment-toml.py  resolve-config.sh
deploy/: action.yml
deploy/scripts/: deploy.sh  generate-requirements.sh  parse-deployment-toml.py  resolve-config.sh
get-api-key/: action.yml  get-api-key.sh
scripts/: login.sh
skills/setup-connect-deploy/: SKILL.md
src/connect_actions/: __init__.py  apptype.py  cli.py  config.py  versions.py
test/: README.md
test/e2e/fastapi-app/: app.py
tests/: test_apptype.py  test_cli.py  test_config.py  test_generate_requirements.py  test_versions.py
tests/e2e/: README.md
tests/e2e/quarto-doc/: .gitignore  report.qmd
tests/e2e/quarto-doc/data/: message.txt
